# Bank-Management-System

./: CMakeLists.txt  README.md  main.cpp
database/: bank.sqlite3
src/: CMakeLists.txt  account_manager.cpp  account_manager.h  bank_manager.cpp  bank_manager.h  bank_types.h  bankmanager.h  comment_manager.h  database.h  database_manager.cpp  database_manager.h  menu.cpp  menu.h  user.h
